# sakulflee.github.io

./: .dockerignore  .env  .gitattributes  .gitignore  .gitlab-ci-deploy.yml  .gitlab-ci-docker-base.yml  .gitlab-ci-docker-lnx-gnueabihf.yml  .gitlab-ci-docker-lnx-x86_64.yml  .gitlab-ci-docker-win.yml  .gitlab-ci-docker.yml  .gitlab-ci-rust-build-lnx-gnueabihf.yml  .gitlab-ci-rust-build-lnx-x86_64.yml  .gitlab-ci-rust-build-win.yml  .gitlab-ci-rust-build.yml  .gitlab-ci-rust-validation-lnx-gnueabihf.yml  .gitlab-ci-rust-validation-lnx-x86_64.yml  .gitlab-ci-rust-validation-win.yml  .gitlab-ci-rust-validation.yml  .gitlab-ci.yml  .gitmodules  404.html  CNAME  CODEOWNERS  Cargo.toml  Containerfile  Dockerfile  Dockerfile.import  Dockerfile.server  Jenkinsfile  LICENSE  README.md  README.md.gpg  Rocket.toml  _config.yml  atom.xml  build.rs  build.sh  config.toml  credits.html  deploy.docker  (+21 more)
.github/workflows/: deploy.yml  docker-publish-import.yml  docker-publish-server.yml  nodejs.yml
_frontend/: Dockerfile
_javascript/: dots.js
_sass/: main.scss  start-frame.scss
ansible/: Makefile  inventory.conf
backend/: Dockerfile  build.gradle  mongo_settings.docker-compose.prop
blog/: index.html
categories/: index.html
client_lib/: Cargo.toml  README.md
contact/: index.html
credits/: index.html
data/: Cargo.toml
data/migrations/2020-06-13-123351_posts/: up.sql
data/src/: lib.rs  schema.rs
data/src/data/: posts.rs
data/src/database/: connection.rs  migration.rs
data/src/models/: mod.rs  new_post.rs  post.rs  preface.rs
data/src/models/context/: blog.rs  context.rs  mod.rs  view.rs
diagrams/: test.drawio
docker/: base.docker  lnx_gnueabihf_beta.docker  lnx_gnueabihf_nightly.docker  lnx_gnueabihf_stable.docker  lnx_x86_64_beta.docker  lnx_x86_64_nightly.docker  lnx_x86_64_stable.docker  win_x86_64_beta.docker  win_x86_64_nightly.docker  win_x86_64_stable.docker
frontend/: Dockerfile  nginx.conf  package.json
import/: Cargo.toml
legal/: index.html
old/: .gitlab-ci.yml  .gitmodules  CODEOWNERS  docker-compose.yml  make_docker_files.sh
posts/: Backend-Optimization.md  Backend.md  Data-Layer.md  Frontend.md  Importer.md  Introduction.md  Multi-Project.md
previous/: .gitignore  favicon.kra
projects/: index.html
public/: index.html  manifest.json  style.css
sass/: style.sass
scaffolds/: post.md
server/: .env  Cargo.toml  Rocket.toml
server/src/: main.rs
server/src/endpoints/: about_me.rs  blog.rs  contact.rs  credits.rs  index.rs  legal.rs  mod.rs  page.rs  posts.rs  projects.rs
server/src/endpoints/blog/: blog.rs  mod.rs  view.rs
src/: App.tsx  application_context.rs  folder_configuration.rs  index.tsx  main.rs  models.rs
static/: CNAME  manifest.json  robots.txt  style.sass
tags/: index.html
template/: about_me.html.tera  base.html.tera  blog.html.tera  contact.html.tera  credits.html.tera  index.html.tera  legal.html.tera  projects.html.tera  view.html.tera
templates/: 404.html  about_me.html  blog copy.html  blog-page.html  blog.html  contact.html  credits.html  index.html  legal.html  posting-list.html  posting-view.html  robots.txt  taxonomy_list.html  taxonomy_single.html  view.html
(+341 files in other folders)
