[package]
name = "website"
version = "0.1.0"
authors = ["@Sakul6499 | Lukas Weber <me@sakul6499.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_sqlite_pool", "diesel_postgres_pool", "json"]