[package]
name = "website"
version = "0.1.0"
authors = ["@Sakul6499 | Lukas Weber <me@sakul6499.de>"]
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
diesel = { version = "^1.4", features = ["postgres"] }
diesel_migrations = "^1.4"
log = "0.4"
dotenv = "0.15"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_sqlite_pool", "diesel_postgres_pool", "json"]