[package]
name = "data"
version = "0.1.0"
authors = ["@Sakul6499 | Lukas Weber <me@sakul6499.de>"]
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.7"
serde = "1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
diesel = { version = "^1.4", features = ["postgres", "chrono"] }
diesel_migrations = "^1.4"
log = "0.4"
dotenv = "0.15"
toml = "0.5"
pulldown-cmark = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_postgres_pool", "json", "tera_templates", "serve", "helmet"]
